--- a/src/App.css
+++ b/src/App.css
@@ -1,28 +1,17 @@
-.App {
-  text-align: center;
+img.lock {
+  padding-right: 14px;
+  padding-top: 3px;
+  padding-bottom: 3px;
 }
 
-.App-logo {
-  animation: App-logo-spin infinite 20s linear;
-  height: 80px;
+img.check-box {
+  padding-right: 5px;
 }
 
-.App-header {
-  background-color: #222;
-  height: 150px;
-  padding: 20px;
-  color: white;
+.light-gray {
+  color: LightGray;
 }
 
-.App-title {
-  font-size: 1.5em;
-}
-
-.App-intro {
-  font-size: large;
-}
-
-@keyframes App-logo-spin {
-  from { transform: rotate(0deg); }
-  to { transform: rotate(360deg); }
+.gray {
+  color: gray;
 }
